--- a/view/contact.html
+++ b/view/contact.html
@@ -50,22 +50,22 @@
         <section class="contact">
             <div class="left">
                 <p class="get">Get in touch with us.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <p class="c-greet">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                 
                 <div class="pnum">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="../assets/img/icons/Icon feather-phone.svg" alt="">
+                    <p>+233 203398768</p>
                 </div>
 
                 <div class="mail">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="../assets/img/icons/Icon ionic-md-mail-green.svg" alt="">
+                    <p>agcrop@gmail.com</p>
                 </div>
 
                 <div class="socials">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="../assets/img/icons/Icon awesome-facebook-white.svg" alt="" width="20">
+                    <img src="../assets/img/icons/Icon awesome-twitter-white.svg" alt="">
+                    <img src="../assets/img/icons/Icon awesome-instagram-white.svg" alt="">
                 </div>
             </div>
 
