added links to corresponding pages

--- a/view/login.html
+++ b/view/login.html
@@ -24,23 +24,23 @@
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
-            <!-- <div class="burger">
+            <div class="burger">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
-            </div> -->
+            </div>
 
             <!-- nav links -->
-            <!-- <nav>
+            <nav>
                 <ul class="navlinks">
-                    <li><a href="" class="links">Home</a></li>
-                    <li><a href="" class="links">About Us</a></li>
-                    <li><a href="" class="links">Services</a></li>
-                    <li><a href="" class="links">Contact Us</a></li>
-                    <li><a href="" class="links">Login</a></li>
-                    <li id="createacc"><a href="" class="links">Create account</a></li>
+                    <li><a href="homepage.html" class="links">Home</a></li>
+                    <li><a href="about.html" class="links">About Us</a></li>
+                    <li><a href="services.html" class="links">Services</a></li>
+                    <li><a href="login.html" class="links">Contact Us</a></li>
+                    <li><a href="contact.html" class="links">Login</a></li>
+                    <li id="createacc"><a href="signup.html" class="links">Create account</a></li>
                 </ul>
-            </nav> -->
+            </nav>
             <!-- end of nav links -->
         </div>
         <!-- end of navbar content -->
@@ -95,5 +95,6 @@
             </div>
         </section>
     </main>
+<script src="../js/index.js"></script>
 </body>
 </html>
