--- a/css/login.css
+++ b/css/login.css
@@ -40,12 +40,15 @@ body{
     width: 100%;
     text-align: left;
     margin-bottom: 10px;
+    padding: 0px 15px;
 }
 
 .field input[type="text"], .field input[type="password"]{
     width: 100%;
     padding: 15px;
     text-indent: 20px;
+    border-radius: 8px;
+    border: 0;
 }
 
 
