--- a/view/team.html
+++ b/view/team.html
@@ -32,12 +32,12 @@
             <!-- nav links -->
             <nav>
                 <ul class="navlinks">
-                    <li><a href="" class=" t-link">Home</a></li>
-                    <li><a href="" class=" t-link">About Us</a></li>
-                    <li><a href="" class=" t-link">Services</a></li>
-                    <li><a href="" class=" t-link">Contact Us</a></li>
-                    <li><a href="" class=" t-link">Login</a></li>
-                    <li id="createacc"><a href="" class="links t-link">Create account</a></li>
+                    <li><a href="homepage.html" class=" t-link">Home</a></li>
+                    <li><a href="about.html" class=" t-link">About Us</a></li>
+                    <li><a href="services.html" class=" t-link">Services</a></li>
+                    <li><a href="contact.html" class=" t-link">Contact Us</a></li>
+                    <li><a href="login.html" class=" t-link">Login</a></li>
+                    <li id="createacc"><a href="signup.html" class="links t-link">Create account</a></li>
                 </ul>
             </nav>
             <!-- end of nav links -->
