about page created

--- a/view/about.html
+++ b/view/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/about.css">
     <title>About AgriCrop</title>
 </head>
 <body>
@@ -14,14 +16,14 @@
             <!-- navbar brand -->
             <div class="navbar-brand">
                 <!-- logo -->
-                <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
+                <img src="../assets/img/logo/Logo-black.png" alt="" width="50">
                 <!-- company name -->
                 <p class="brand">AgriCrop</p>
             </div>
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
-            <div class="burger">
+            <div class="burger team">
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
@@ -30,12 +32,12 @@
             <!-- nav links -->
             <nav>
                 <ul class="navlinks">
-                    <li><a href="homepage.html" class=" links">Home</a></li>
-                    <li><a href="about.html" class=" links">About Us</a></li>
-                    <li><a href="services.html" class=" links">Services</a></li>
-                    <li><a href="contact.html" class=" links">Contact Us</a></li>
-                    <li><a href="login.html" class=" links">Login</a></li>
-                    <li id="createacc"><a href="signup.html" class="links">Create account</a></li>
+                    <li><a href="homepage.html" class=" t-link">Home</a></li>
+                    <li><a href="about.html" class=" t-link">About Us</a></li>
+                    <li><a href="services.html" class=" t-link">Services</a></li>
+                    <li><a href="contact.html" class=" t-link">Contact Us</a></li>
+                    <li><a href="login.html" class=" t-link">Login</a></li>
+                    <li id="createacc"><a href="signup.html" class="t-link">Create account</a></li>
                 </ul>
             </nav>
             <!-- end of nav links -->
@@ -43,5 +45,14 @@
         <!-- end of navbar content -->
     </div>
     <!-- end of navigation bar -->
+
+    <!-- main content -->
+    <main>
+        <section class="jumbotron">
+            <img src="../assets/img/backgrounds/federico-respini-sYffw0LNr7s-unsplash.jpg" alt="">
+        </section>
+    </main>
+
+<script src="../js/index.js"></script>
 </body>
 </html>
