--- a/view/homepage.html
+++ b/view/homepage.html
@@ -15,12 +15,12 @@
         <!-- navbar content -->
         <div class="container">
             <!-- navbar brand -->
-            <div class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <!-- logo -->
                 <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
                 <!-- company name -->
                 <p class="brand">AgriCrop</p>
-            </div>
+            </a>
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
