--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ body{
     background-color: #010B23;
     overflow-x: hidden;
     position: relative;
+    scroll-behavior: smooth;
 }
 
 
 .presentation{
-    /* padding: 20px; */
     display: block;
     width: 90%;
     margin: auto;
@@ -51,6 +51,7 @@ input[type="button"]{
     color: white;
     font-size: 1.2rem;
     border: transparent;
+    cursor: pointer;
 }
 
 
