--- a/view/login.html
+++ b/view/login.html
@@ -15,12 +15,12 @@
         <!-- navbar content -->
         <div class="container">
             <!-- navbar brand -->
-            <div class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
                 <!-- logo -->
                 <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
                 <!-- company name -->
                 <!-- <p class="brand">AgriCrop</p> -->
-            </div>
+            </a>
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
@@ -53,7 +53,7 @@
             <div class="login-plaque">
                 <div class="left-side">
                     <!-- heading -->
-                    <img src="../assets/img/icons/Icon awesome-user-circle.svg" alt="" width="150">
+                    <img src="../assets/img/icons/Icon awesome-user-circle.svg" alt="" width="100">
                     <p class="h-text">USER LOGIN</p>
                     <p class="slogan">Welcome to AgriCrop</p>
                    
@@ -81,7 +81,7 @@
                             <!-- create account and forgot password -->
                             <div class="ques">
                                 <p>Not a member? <a href="">Create an Account</a></p>
-                                <p><a href="">Forgot password?</a></p>
+                                <p><a href="signup.html">Forgot password?</a></p>
                             </div>
                         </form>
                     </div>
