--- a/view/signup.html
+++ b/view/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/login.css">
-    <title>AgriCrop-Login</title>
+    <title>AgriCrop-Sign Up</title>
     <script src="https://use.fontawesome.com/dfe99fdb12.js"></script>
 </head>
 <body>
@@ -15,12 +15,12 @@
         <!-- navbar content -->
         <div class="container">
             <!-- navbar brand -->
-            <div class="navbar-brand">
+            <a class="navbar-brand">
                 <!-- logo -->
                 <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
                 <!-- company name -->
                 <!-- <p class="brand">AgriCrop</p> -->
-            </div>
+            </a>
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
@@ -59,7 +59,7 @@
                 
                 <div class="left-side su-side">
                     <!-- heading -->
-                    <img src="../assets/img/icons/Icon awesome-user-circle-1.svg" alt="" width="150">
+                    <img src="../assets/img/icons/Icon awesome-user-circle-1.svg" alt="" width="100">
                     <p class="h-text">SIGN UP</p>
                     <p class="slogan">Welcome to AgriCrop</p>
                    
@@ -89,11 +89,11 @@
                             </div>
 
                             <!-- button -->
-                            <input type="button" value="Login">
+                            <input type="button" value="Sign Up">
 
                             <!-- create account and forgot password -->
                             <div class="ques">
-                                <p>Already have an account? <a href="">Log in</a></p>
+                                <p>Already have an account? <a href="login.html">Log in</a></p>
                             </div>
                         </form>
                     </div>
