--- a/view/team.html
+++ b/view/team.html
@@ -14,12 +14,12 @@
         <!-- navbar content -->
         <div class="container">
             <!-- navbar brand -->
-            <div class="navbar-brand">
+            <a href="index.html" class="navbar-brand black">
                 <!-- logo -->
                 <img src="../assets/img/logo/Logo-black.png" alt="" width="50">
                 <!-- company name -->
                 <p class="brand">AgriCrop</p>
-            </div>
+            </a>
             <!-- end of navbar brand -->
 
             <!-- hamburger menu -->
