--- a/view/homepage.html
+++ b/view/homepage.html
@@ -33,10 +33,11 @@
             <!-- nav links -->
             <nav>
                 <ul class="navlinks">
-                    <li><a href="homepage.html" class="links">Home</a></li>
-                    <li><a href="about.html" class="links">About Us</a></li>
-                    <li><a href="services.html" class="links">Services</a></li>
-                    <li><a href="contact.html" class="links">Contact Us</a></li>
+                    <li><a href="#home" class="links">Home</a></li>
+                    <li><a href="#about" class="links">About Us</a></li>
+                    <li><a href="#services" class="links">Services</a></li>
+                    <li><a href="team.html" class="links">Team</a></li>
+                    <li><a href="#contact" class="links">Contact Us</a></li>
                     <li><a href="login.html" class="links">Login</a></li>
                     <li id="createacc"><a href="signup.html" class="links">Create account</a></li>
                 </ul>
@@ -49,7 +50,7 @@
 
     <!-- main content -->
     <main>
-        <section class="presentation">
+        <section class="presentation" id="home">
             <!-- intro text -->
             <div class="intro-header">
                 <p class="large">A Way of Revolutionizing Agriculture</p>
@@ -68,7 +69,7 @@
         </section>
 
         <!-- section 2 About section-->
-        <section class="mb-content">
+        <section class="mb-content" id="about">
             <!-- heading -->
             <div class="ab-content">
                 <p class="heading ab-heading">About AgriCrop</p>
@@ -87,7 +88,7 @@
 
 
         <!-- start of values section -->
-        <section class="v-values">
+        <section class="v-values" id="values"> 
             <!-- heading -->
             <p class="heading">Our values</p>
 
@@ -143,7 +144,7 @@
         </section>
 
         <!-- services section -->
-        <section class="sc-content">
+        <section class="sc-content" id="services">
             <!-- heading -->
             <p class="heading">What we offer?</p>
 
@@ -186,7 +187,7 @@
         <!-- end of services section -->
 
         <!-- Additional services -->
-        <section class="as-content">
+        <section class="as-content" id="ad-services">
             <!-- heading -->
             <p class="heading">Additional Services</p>
 
@@ -209,7 +210,7 @@
 
 
         <!-- join us section -->
-        <section class="join-us">
+        <section class="join-us" id="joinus">
             <div class="inner">
                 <!-- intro text -->
                 <div class="intro-header">
@@ -224,7 +225,7 @@
                 <!-- closing text -->
                 <div class="c-text">
                     <p class="medium medium-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <input type="button" value="Sign Up now!" onclick="document.location.href='homepage.html'">
+                    <input type="button" value="Sign Up now!" onclick="document.location.href='signup.html'">
                 </div>
             </div>
         </section>
