--- a/view/login.html
+++ b/view/login.html
@@ -36,6 +36,7 @@
                     <li><a href="homepage.html" class="links">Home</a></li>
                     <li><a href="about.html" class="links">About Us</a></li>
                     <li><a href="services.html" class="links">Services</a></li>
+                    <li><a href="team.html" class="links">Team</a></li>
                     <li><a href="login.html" class="links">Contact Us</a></li>
                     <li><a href="contact.html" class="links">Login</a></li>
                     <li id="createacc"><a href="signup.html" class="links">Create account</a></li>
@@ -80,7 +81,7 @@
 
                             <!-- create account and forgot password -->
                             <div class="ques">
-                                <p>Not a member? <a href="">Create an Account</a></p>
+                                <p>Not a member? <a href="signup.html">Create an Account</a></p>
                                 <p><a href="signup.html">Forgot password?</a></p>
                             </div>
                         </form>
