--- a/view/login.html
+++ b/view/login.html
@@ -10,92 +10,102 @@
     <script src="https://use.fontawesome.com/dfe99fdb12.js"></script>
 </head>
 <body>
-    <!-- navigation bar -->
-    <div class="navbar">
-        <!-- navbar content -->
-        <div class="container">
-            <!-- navbar brand -->
-            <a href="index.html" class="navbar-brand">
-                <!-- logo -->
-                <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
-                <!-- company name -->
-                <!-- <p class="brand">AgriCrop</p> -->
-            </a>
-            <!-- end of navbar brand -->
-
-            <!-- hamburger menu -->
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-
-            <!-- nav links -->
-            <nav>
-                <ul class="navlinks">
-                    <li><a href="homepage.html" class="links">Home</a></li>
-                    <li><a href="about.html" class="links">About Us</a></li>
-                    <li><a href="services.html" class="links">Services</a></li>
-                    <li><a href="team.html" class="links">Team</a></li>
-                    <li><a href="login.html" class="links">Contact Us</a></li>
-                    <li><a href="contact.html" class="links">Login</a></li>
-                    <li id="createacc"><a href="signup.html" class="links">Create account</a></li>
-                </ul>
-            </nav>
-            <!-- end of nav links -->
-        </div>
-        <!-- end of navbar content -->
-    </div>
-    <!-- end of navigation bar -->
 
     <!-- login form -->
-    <main>
-        <section class="ag-login">
-            <div class="login-plaque">
-                <div class="left-side">
-                    <!-- heading -->
-                    <img src="../assets/img/icons/Icon awesome-user-circle.svg" alt="" width="100">
-                    <p class="h-text">USER LOGIN</p>
-                    <p class="slogan">Welcome to AgriCrop</p>
-                   
-
-                    <!-- login form -->
-                    <div class="login-form">
-                        <form action="">
-                            <!-- username field -->
-                            <div class="field">
-                                <label for="">Email</label>
-                                <i class="fa fa-envelope icon"></i>
-                                <input type="text" name="" id="" placeholder="Email">
-                            </div>
-
-                            <!-- password field -->
-                            <div class="field">
-                                <label for="">Password</label>
-                                <i class="fa fa-lock icon"></i>
-                                <input type="password" name="" id="" placeholder="Password">
-                            </div>
-
-                            <!-- button -->
-                            <input type="button" value="Login">
-
-                            <!-- create account and forgot password -->
-                            <div class="ques">
-                                <p>Not a member? <a href="signup.html">Create an Account</a></p>
-                                <p><a href="signup.html">Forgot password?</a></p>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="right-side">
-                    <!-- illustration -->
-                    <!-- <img src="../assets/img/illustration/login-bg.svg" alt=""> -->
-                </div>
-                
+    <div class="login-container">
+        <!-- left side -->
+        <div class="left">
+            <!-- logo -->
+            <div class="brand">
+                <img src="../assets/img/logo/Layer 2.svg" alt="" width="50">
+                <p>AgriCrop</p>
             </div>
-        </section>
-    </main>
+
+            <!-- message -->
+            <p class="log-msg">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam assumenda aspernatur illo commodi quis nisi vel ad id necessitatibus, quia blanditiis optio nulla vo
+            </p>
+
+            <!-- illustration -->
+            <div class="ills">
+                <img src="../assets/img/illustration/lg-ill.svg" alt="">
+            </div>
+        </div>
+
+        <!-- right side -->
+        <div class="right">
+
+            <!-- navigation bar -->
+            <div class="navbar">
+                <!-- navbar content -->
+                <div class="container">
+                    <!-- navbar brand -->
+                    <a href="index.html" class="navbar-brand black">
+                        <!-- logo -->
+                        <img src="../assets/img/logo/Logo-black.png" alt="" width="50" class="logo">
+                        <!-- company name -->
+                    </a>
+                    <!-- end of navbar brand -->
+
+                    <!-- hamburger menu -->
+                    <div class="burger team">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+
+                    <!-- nav links -->
+                    <nav>
+                        <ul class="navlinks">
+                            <li><a href="homepage.html" class="t-link">Home</a></li>
+                            <li><a href="about.html" class="t-link">About Us</a></li>
+                            <li><a href="services.html" class=" t-link">Services</a></li>
+                            <li><a href="team.html" class=" t-link">Team</a></li>
+                            <li><a href="contact.html" class=" t-link">Contact Us</a></li>
+                            <li><a href="login.html" class=" t-link">Login</a></li>
+                            <li id="createacc"><a href="signup.html" class="t-link">Create account</a></li>
+                        </ul>
+                    </nav>
+                    <!-- end of nav links -->
+                </div>
+                <!-- end of navbar content -->
+            </div>
+            <!-- end of navigation bar -->
+            <!-- heading -->
+            <div class="others">
+                <p class="heading">
+                    Sign in
+                </p>
+    
+                <p class="sub-text"><strong>Login to enjoy the full agricultural experience</strong></p>
+    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,<br class="break"> corrupti! Modi voluptate </p>
+                <form action="">
+                    <div class="field">
+                        <label for="">Username or email</label><br>
+                        <input type="text" name="" id="">
+                    </div>
+    
+                    <div class="field">
+                        <label for="">Password</label><br>
+                        <input type="password" name="" id="">
+                    </div>
+    
+                    <div class="kp">
+                        <input type="checkbox" name="" id="">
+                        <p>Keep me logged in</p>
+                    </div>
+    
+                    <!-- button -->
+                    <div class="btn">
+                        <input type="button" value="Login">
+                    </div>
+                    <p class="ask">Don't have an account? Create one <a href="">here</a></p>
+                </form>
+            </div>
+            
+        </div>
+    </div>
 <script src="../js/index.js"></script>
 </body>
 </html>
