--- a/view/login.html
+++ b/view/login.html
@@ -36,7 +36,7 @@
         <div class="right">
 
             <!-- navigation bar -->
-            <div class="navbar">
+            <div class="navbar nav-white">
                 <!-- navbar content -->
                 <div class="container">
                     <!-- navbar brand -->
