--- a/view/services.html
+++ b/view/services.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- navigation bar -->
-    <div class="navbar">
+    <div class="navbar nav-white">
         <!-- navbar content -->
         <div class="container">
             <!-- navbar brand -->
