--- a/css/homepage.css
+++ b/css/homepage.css
@@ -11,6 +11,10 @@ body{
     margin-bottom: 100px;
 }
 
+.mb-content{
+    height: 70vh;
+}
+
 .heading, .ab-heading{
     text-align: center;
     font-size: 2.3rem;
