--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,10 @@ body{
 
 
 .presentation{
+    /* height: 100vh; */
     display: block;
     width: 90%;
-    margin: 100px auto;
+    margin: 150px auto;
     text-align: center;
 }
 
