--- a/view/addNewLivestock.html
+++ b/view/addNewLivestock.html
@@ -1,120 +1,77 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgriCrop - User</title>
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/ushome.css">
-    <link rel="stylesheet" href="../css/addNewTask.css">
-    <link rel="stylesheet" href="../css/livestock.css">
+    <title>Add New Task</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .wrapper{
+            width: 600px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
-
 <body>
-
-    <!-- end of navigation bar -->
-
-    <!-- page content -->
-    <div class="form-content">
-
-
-        <!-- right content -->
-        <div class="addNewTask-right-side">
-            <!-- topbar -->
-            <div class="topbar">
-                <div class="settings">
-                    <img src="../assets/img/icons/icons8-settings-100.png" alt="">
+    <div class="wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="mt-5">Add New Livestock</h2>
+                    <p>Please fill this form and submit to add a new task record to the database.</p>
+                    <form action="addNewLivestock.php" name="addlivestock" id="addlivestock" method="POST" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="Enter the animal name." class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="animaltype">Animal type</label>
+                            <input type="text" id="animaltype" name="animaltype" placeholder="Enter the animal type." class="form-control">
+                       
+                        </div>
+                        <div class="form-group">
+                            <label for="sex">Sex</label>
+                            <input type="text" id="sex" name="sex" placeholder="Enter the sex here." class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="Breed">Breed</label>
+                            <input type="text" id="breed" name="breed" placeholder="Enter the breed here." class="form-control">
+                        </div>
+                            
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea id="description" name="description" placeholder="Write your description here." class="form-control"></textarea>
+                        </div>
+                            
+                        <div class="form-group">
+                            <label for="tagnumber">Tag number</label>
+                            <input type="number" id="tagnumber" name="tagnumber" placeholder="Enter the tag number here." class="form-control">
+                        </div>
+                            
+                        <div class="form-group">
+                            <label for="weight">Weight</label>
+                            <input type="number" id="weight" name="weight" placeholder="Enter the weight here." class="form-control">
+                        </div>
+                            
+                        <div class="form-group">
+                            <label for="feedtype">Feed type</label>
+                            <input type="text" id="feedytype" name="feedtype" placeholder="Enter the feedtype number here." class="form-control">
+                        </div>
+                            
+                        <div class="form-group">
+                            <label for="price">Price</label>
+                            <input type="number" id="price" name="price" placeholder="Enter the price number here." class="form-control">
+                        </div>
+                            
+                       
+                        <input name="submit" type="submit" class="btn btn-primary" value="Submit">
+                        <a href="livestock.php" class="btn btn-secondary ml-2">Cancel</a>
+                        
+                    </form>
                 </div>
-            </div>
-
-
-            <div class="livestock-form">
-                <form action="addNewLivestock.php" name="addlivestock" id="addlivestock" method="POST" enctype="multipart/form-data">
-                    <div class="row">
-                        <label for="name">Name</label>
-                        <div class="input">
-                            <input type="text" id="name" name="name" placeholder="Enter the animal name.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="animaltype">Animal type</label>
-                        <div class="input">
-                            <input type="text" id="animaltype" name="animaltype" placeholder="Enter the animal type.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="sex">Sex</label>
-                        <div class="input">
-                            <input type="text" id="sex" name="sex" placeholder="Enter the sex here.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="Breed">Breed</label>
-                        <div class="input">
-                            <input type="text" id="breed" name="breed" placeholder="Enter the breed here.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="description">Description</label>
-                        <div class="input">
-                            <textarea id="description" name="description"
-                                placeholder="Write your description here."></textarea>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="tagnumber">Tag number</label>
-                        <div class="input">
-                            <input type="number" id="tagnumber" name="tagnumber" placeholder="Enter the tag number here.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="weight">Weight</label>
-                        <div class="input">
-                            <input type="number" id="weight" name="weight" placeholder="Enter the weight here.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="feedtype">Feed type</label>
-                        <div class="input">
-                            <input type="text" id="feedytype" name="feedtype" placeholder="Enter the feedtype number here.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <label for="price">Price</label>
-                        <div class="input">
-                            <input type="number" id="price" name="price" placeholder="Enter the price number here.">
-                        </div>
-                    </div>
-
-                    <div class="input">
-                        <button type="submit" name="submit" value="submit">Submit</button>
-                    </div>
-
-                </form>
-
-
-
-            </div>
-
+            </div>        
         </div>
     </div>
-    <!-- footer -->
-    <div class="footer-style">
-        <img src="../assets/img/icons/Icon awesome-copyright.svg" alt="">
-        <p>2021 AgriCrop</p>
-    </div>
-
-
 </body>
-
 </html>
