--- a/view/addNewTask.html
+++ b/view/addNewTask.html
@@ -1,81 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgriCrop - User</title>
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/ushome.css">
-    <link rel="stylesheet" href="../css/addNewTask.css">
+    <title>Add New Task</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .wrapper{
+            width: 600px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-
-    <!-- end of navigation bar -->
-
-    <!-- page content -->
-    <div class="form-content">
-
-
-        <!-- right content -->
-        <div class="addNewTask-right-side">
-            <!-- topbar -->
-            <div class="topbar">
-                <div class="settings">
-                    <img src="../assets/img/icons/icons8-settings-100.png" alt="">
-                </div>
-            </div>
-
-
-        <div class="task-form">
-            <form action="addNewTask.php" name="addtask" id="addtask" method="POST" enctype="multipart/form-data">
+    <div class="wrapper">
+        <div class="container-fluid">
             <div class="row">
-                <label for="fname">Title</label>
-                <div class="input">
-                <input type="text" id="title" name="title" placeholder="Enter your task title.">
+                <div class="col-md-12">
+                    <h2 class="mt-5">Add New Task</h2>
+                    <p>Please fill this form and submit to add a new task record to the database.</p>
+                    <form action="addNewTask.php" method="POST">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" name="title" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Due Date</label>
+                            <input type="date" name="date" class="form-control ">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                            <input type="text" name="description" class="form-control ">
+                        </div>
+                        <div class="form-group">
+                            <label>Associated To</label>
+                            <input type="text" name="assignee" class="form-control">
+                            
+                        </div>
+                        <input name="submit" type="submit" class="btn btn-primary" value="Submit">
+                        <a href="task.php" class="btn btn-secondary ml-2">Cancel</a>
+                        
+                    </form>
                 </div>
-            </div>
-
-            <div class="row">
-                <label for="datee">Date</label>
-                <div class="input">
-                <input type="date" id="duedate" name="duedate">
-                </div>
-            </div>
-
-            <div class="row">
-                <label for="lname">Assignee</label>
-                <div class="input">
-                <input type="text" id="assignee" name="assignee" placeholder="Enter the assignee here.">
-                </div>
-            </div>
-
-
-            <div class="row">
-                <label for="subject">Description</label>
-                <div class="input">
-                <textarea id="description" name="description" placeholder="Write your description here."></textarea>
-                </div>
-            </div>
-
-            <div class="input">
-                <button type="submit" name="submit" value="submit">Submit</button>
-            </div>
-
-            </form>
-
-
-
-        </div>
-
+            </div>        
         </div>
     </div>
-        <!-- footer -->
-        <div class="footer-style">
-                <img src="../assets/img/icons/Icon awesome-copyright.svg" alt="">
-                <p>2021 AgriCrop</p>
-        </div>
-
-
 </body>
 </html>
