--- a/css/login.css
+++ b/css/login.css
@@ -107,9 +107,10 @@ form {
   margin-left: 10px;
 }
 
-input[type="button"] {
+input[type="submit"] {
+  font-size: 1.2rem;
   padding: 15px;
-  width: 94%;
+  width: 50%;
   border-radius: 8px;
   border: none;
   background-color: #010b23;
